feat: Refactor MatchController and MatchService to streamline live link moderation logic and add status filter